[Glitch] Fix uncontained text overflow in column header
Port bff9f0eb6ddfec989a7f316dc7e9b0a7cc9b5086 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/mastodon/components.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon/components.scss
@@ -4730,6 +4730,7 @@ a.status-card {
   &__title-wrapper {
     display: flex;
     flex-grow: 1;
+    min-width: 0;
   }
 
   &__title {
@@ -4745,9 +4746,7 @@ a.status-card {
     background: transparent;
     font: inherit;
     text-align: start;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+    min-width: 0;
 
     &--with-back-button {
       padding-inline-start: 0;
@@ -4760,6 +4759,12 @@ a.status-card {
     .logo {
       height: 24px;
     }
+  }
+
+  &__text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   .column-header__back-button {
